initial commit for single docker-compose.yml

--- a/.env
+++ b/.env
@@ -1,2 +1,14 @@
-TAG=0.11.0
-REGISTRY_PREFIX=gcr.io/hedera-registry/
+HEDERA_TAG=0.10.0
+MIRROR_TAG=0.27.0
+HEDERA_REGISTRY_PREFIX=gcr.io/hedera-registry/
+MIRROR_REGISTRY_PREFIX=gcr.io/mirrornode/
+
+
+POSTGRES_DB=fcfs
+POSTGRES_USER=swirlds
+POSTGRES_PASSWORD=password
+PG_DATA=/var/lib/postgresql/data/pgdata
+
+MIRROR_POSTGRES_DB=mirror_node
+MIRROR_POSTGRES_USER=mirror_node
+MIRROR_POSTGRES_PASSWORD=mirror_node_pass
