get latest changes

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ PG_DATA=/var/lib/postgresql/data/pgdata
 MIRROR_POSTGRES_DB=mirror_node
 MIRROR_POSTGRES_USER=mirror_node
 MIRROR_POSTGRES_PASSWORD=mirror_node_pass
+
+POSTGRES_IMAGE=postgres:13.5-alpine
