--- a/.env
+++ b/.env
@@ -34,3 +34,6 @@ MIRROR_POSTGRES_IMAGE=postgres:13.5-alpine
 #### MINIO settings ####
 MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
+
+
+#### Uploader settings ####
