--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,8 @@ services:
     environment:
       MINIO_ROOT_USER: "${MINIO_ROOT_USER}"
       MINIO_ROOT_PASSWORD: "${MINIO_ROOT_PASSWORD}"
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
     networks:
       - mirror-node-bridge
     ports:
@@ -89,6 +91,20 @@ services:
       - "9001:9001"
     volumes:
       - minio-data:/data
+
+  createbuckets:
+    image: minio/mc
+    networks:
+      - mirror-node-bridge
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      until (/usr/bin/mc config host add minio-data http://minio:9000 minioadmin minioadmin) do echo '...waiting...' && sleep 1; done;
+      /usr/bin/mc mb minio-data/hedera-streams;
+      /usr/bin/mc policy set download minio-data/hedera-streams;
+      exit 0;
+      "
   db:
     image: "${MIRROR_POSTGRES_IMAGE}"
     environment:
@@ -244,6 +260,7 @@ services:
     tty: true
     volumes:
       - ./compose-network/mirror-node/application.yml:/usr/etc/hedera-mirror-web3/application.yml
+
 networks:
     network-node-bridge:
       name: network-node-bridge
