--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,8 +61,8 @@ services:
       - "50212:50212"
     volumes:
       - "network-node-account-balances:/opt/hgcapp/accountBalances"
-      - "network-node-event-streams:/opt/hgcapp/eventsStreams"
-      - "network-node-record-streams:/opt/hgcapp/recordStreams"
+      - "${NETWORK_NODE_LOGS_ROOT_PATH}/eventsStreams:/opt/hgcapp/eventsStreams"
+      - "${NETWORK_NODE_LOGS_ROOT_PATH}/recordStreams:/opt/hgcapp/recordStreams"
       - "${APPLICATION_ROOT_PATH}/data/config:/opt/hgcapp/services-hedera/HapiApp2.0/data/config"
       - "${NETWORK_NODE_LOGS_ROOT_PATH}/stdout.log:/opt/hgcapp/services-hedera/HapiApp2.0/stdout.log"
       - "${NETWORK_NODE_LOGS_ROOT_PATH}/gc.log:/opt/hgcapp/services-hedera/HapiApp2.0/gc.log"
@@ -261,8 +261,8 @@ services:
     volumes:
       - ./compose-network/mirror-node/application.yml:/usr/etc/hedera-mirror-web3/application.yml
 
-  network-node-record-streams:
-    container_name: network-node-record-streams
+  network-node-record-streams-uploader:
+    container_name: network-node-record-streams-uploader
     image: gcr.io/hedera-registry/uploader-mirror:0.4.0
     user: root
     restart: unless-stopped
@@ -272,9 +272,9 @@ services:
       - mirror-node-bridge
     environment:
       DEBUG: "true"
-      REAPER_ENABLE: "false"
+      REAPER_ENABLE: "true"
       REAPER_MIN_KEEP: "20"
-      REAPER_INTERVAL: "300"
+      REAPER_INTERVAL: "5"
       S3_ENABLE: "true"
       GCS_ENABLE: "false"
       SIG_REQUIRE: "true"
@@ -286,7 +286,7 @@ services:
       S3_ACCESS_KEY: "minioadmin"
       S3_SECRET_KEY: "minioadmin"
     volumes:
-      - "network-node-record-streams:/records"
+      - "${NETWORK_NODE_LOGS_ROOT_PATH}/recordStreams:/records"
     command:
       - /usr/bin/env
       - python3.7
@@ -297,8 +297,8 @@ services:
       - --s3-endpoint
       - http://minio:9000
 
-  network-node-event-streams:
-    container_name: network-node-event-streams
+  network-node-event-streams-uploader:
+    container_name: network-node-event-streams-uploader
     image: gcr.io/hedera-registry/uploader-mirror:0.4.0
     user: root
     restart: unless-stopped
@@ -308,9 +308,9 @@ services:
       - mirror-node-bridge
     environment:
       DEBUG: "true"
-      REAPER_ENABLE: "false"
+      REAPER_ENABLE: "true"
       REAPER_MIN_KEEP: "20"
-      REAPER_INTERVAL: "300"
+      REAPER_INTERVAL: "5"
       S3_ENABLE: "true"
       GCS_ENABLE: "false"
       SIG_REQUIRE: "true"
@@ -322,7 +322,7 @@ services:
       S3_ACCESS_KEY: "minioadmin"
       S3_SECRET_KEY: "minioadmin"
     volumes:
-      - "network-node-event-streams:/events"
+      - "${NETWORK_NODE_LOGS_ROOT_PATH}/eventsStreams:/events"
     command:
       - /usr/bin/env
       - python3.7
@@ -333,41 +333,41 @@ services:
       - --s3-endpoint
       - http://minio:9000
 
-  network-node-account-balances:
-    container_name: network-node-account-balances
-    image: gcr.io/hedera-registry/uploader-mirror:0.4.0
-    user: root
-    restart: unless-stopped
-    depends_on:
-      - createbuckets
-    networks:
-      - mirror-node-bridge
-    environment:
-      DEBUG: "true"
-      REAPER_ENABLE: "false"
-      REAPER_MIN_KEEP: "20"
-      REAPER_INTERVAL: "300"
-      S3_ENABLE: "true"
-      GCS_ENABLE: "false"
-      SIG_REQUIRE: "true"
-      SIG_PRIORITIZE: "false"
-      SIG_EXTENSION: "pb_sig.gz"
-      STREAM_EXTENSION: "pb.gz"
-      BUCKET_NAME: "hedera-streams"
-      BUCKET_PATH: "accountBalances/balance0"
-      S3_ACCESS_KEY: "minioadmin"
-      S3_SECRET_KEY: "minioadmin"
-    volumes:
-      - "network-node-account-balances:/accountbalance"
-    command:
-      - /usr/bin/env
-      - python3.7
-      - /usr/local/bin/mirror.py
-      - --linux
-      - --watch-directory
-      - /accountbalance
-      - --s3-endpoint
-      - http://minio:9000
+#  network-node-account-balances-uploader:
+#    container_name: network-node-account-balances-uploader
+#    image: gcr.io/hedera-registry/uploader-mirror:0.4.0
+#    user: root
+#    restart: unless-stopped
+#    depends_on:
+#      - createbuckets
+#    networks:
+#      - mirror-node-bridge
+#    environment:
+#      DEBUG: "true"
+#      REAPER_ENABLE: "false"
+#      REAPER_MIN_KEEP: "20"
+#      REAPER_INTERVAL: "300"
+#      S3_ENABLE: "true"
+#      GCS_ENABLE: "false"
+#      SIG_REQUIRE: "true"
+#      SIG_PRIORITIZE: "false"
+#      SIG_EXTENSION: "pb_sig.gz"
+#      STREAM_EXTENSION: "pb.gz"
+#      BUCKET_NAME: "hedera-streams"
+#      BUCKET_PATH: "accountBalances/balance0"
+#      S3_ACCESS_KEY: "minioadmin"
+#      S3_SECRET_KEY: "minioadmin"
+#    volumes:
+#      - "network-node-account-balances:/accountbalance"
+#    command:
+#      - /usr/bin/env
+#      - python3.7
+#      - /usr/local/bin/mirror.py
+#      - --linux
+#      - --watch-directory
+#      - /accountbalance
+#      - --s3-endpoint
+#      - http://minio:9000
 
 networks:
     network-node-bridge:
