Updated minio config methodolgy

--- a/.env
+++ b/.env
@@ -23,6 +23,7 @@ JAVA_HEAP_MAX=4g
 JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseZGC -Xlog:gc*:gc.log"
 
 #### Bind Mount Settings ####
+MINIO_DATA_PATH=./network-logs/minio-server/data
 NETWORK_NODE_LOGS_ROOT_PATH=./network-logs/node
 APPLICATION_ROOT_PATH=./compose-network/network-node
 
