--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,7 +92,7 @@ services:
     environment:
       DEBUG: "true"
       REAPER_ENABLE: "true"
-      REAPER_MIN_KEEP: "20"
+      REAPER_MIN_KEEP: "1"
       REAPER_INTERVAL: "5"
       S3_ENABLE: "true"
       GCS_ENABLE: "false"
@@ -101,7 +101,7 @@ services:
       SIG_EXTENSION: "rcd_sig"
       STREAM_EXTENSION: "rcd"
       BUCKET_NAME: "hedera-streams"
-      BUCKET_PATH: "recordStreams/node0"
+      BUCKET_PATH: "recordStreams/record0.0.3"
       S3_ACCESS_KEY: "minioadmin"
       S3_SECRET_KEY: "minioadmin"
     volumes:
@@ -112,9 +112,10 @@ services:
       - /usr/local/bin/mirror.py
       - --linux
       - --watch-directory
-      - /records
+      - /records/record0.0.3
       - --s3-endpoint
       - http://minio:9000
+      - --debug
 
   minio:
     image: minio/minio
