--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,7 @@ services:
       - "50211:50211"
       - "50212:50212"
     volumes:
-      - "network-node-account-balances:/opt/hgcapp/accountBalances"
+      - "${NETWORK_NODE_LOGS_ROOT_PATH}/accountBalances:/opt/hgcapp/accountBalances"
       - "${NETWORK_NODE_LOGS_ROOT_PATH}/eventsStreams:/opt/hgcapp/eventsStreams"
       - "${NETWORK_NODE_LOGS_ROOT_PATH}/recordStreams:/opt/hgcapp/recordStreams"
       - "${APPLICATION_ROOT_PATH}/data/config:/opt/hgcapp/services-hedera/HapiApp2.0/data/config"
@@ -116,7 +116,80 @@ services:
       - --s3-endpoint
       - http://minio:9000
       - --debug
-
+  event-streams-uploader:
+    image: gcr.io/hedera-registry/uploader-mirror:0.4.0
+    container_name: event-streams-uploader
+    user: root
+    restart: unless-stopped
+    depends_on:
+      minio:
+        condition: service_started
+    networks:
+      - mirror-node-bridge
+    environment:
+      DEBUG: "true"
+      REAPER_ENABLE: "true"
+      REAPER_MIN_KEEP: "1"
+      REAPER_INTERVAL: "5"
+      S3_ENABLE: "true"
+      GCS_ENABLE: "false"
+      SIG_REQUIRE: "true"
+      SIG_PRIORITIZE: "true"
+      SIG_EXTENSION: "evts_sig"
+      STREAM_EXTENSION: "evts"
+      BUCKET_NAME: "hedera-streams"
+      BUCKET_PATH: "eventsStreams/events_0.0.3"
+      S3_ACCESS_KEY: "minioadmin"
+      S3_SECRET_KEY: "minioadmin"
+    volumes:
+      - "${NETWORK_NODE_LOGS_ROOT_PATH}/eventsStreams:/events"
+    command:
+      - /usr/bin/env
+      - python3.7
+      - /usr/local/bin/mirror.py
+      - --linux
+      - --watch-directory
+      - /events/events_0.0.3
+      - --s3-endpoint
+      - http://minio:9000
+      - --debug
+  account-balances-uploader:
+    image: gcr.io/hedera-registry/uploader-mirror:0.4.0
+    container_name: account-balances-uploader
+    user: root
+    restart: unless-stopped
+    depends_on:
+      minio:
+        condition: service_started
+    networks:
+      - mirror-node-bridge
+    environment:
+      DEBUG: "true"
+      REAPER_ENABLE: "true"
+      REAPER_MIN_KEEP: "1"
+      REAPER_INTERVAL: "5"
+      S3_ENABLE: "true"
+      GCS_ENABLE: "false"
+      SIG_REQUIRE: "true"
+      SIG_PRIORITIZE: "true"
+      SIG_EXTENSION: "pb_sig.gz"
+      STREAM_EXTENSION: "pb.gz"
+      BUCKET_NAME: "hedera-streams"
+      BUCKET_PATH: "accountBalances/balance0.0.3"
+      S3_ACCESS_KEY: "minioadmin"
+      S3_SECRET_KEY: "minioadmin"
+    volumes:
+      - "${NETWORK_NODE_LOGS_ROOT_PATH}/accountBalances:/balances"
+    command:
+      - /usr/bin/env
+      - python3.7
+      - /usr/local/bin/mirror.py
+      - --linux
+      - --watch-directory
+      - /balances/balance0.0.3
+      - --s3-endpoint
+      - http://minio:9000
+      - --debug
   minio:
     image: minio/minio
     container_name: minio
@@ -296,78 +369,6 @@ services:
     tty: true
     volumes:
       - ./compose-network/mirror-node/application.yml:/usr/etc/hedera-mirror-web3/application.yml
-
-#  network-node-event-streams-uploader:
-#    container_name: network-node-event-streams-uploader
-#    image: gcr.io/hedera-registry/uploader-mirror:0.4.0
-#    user: root
-#    restart: unless-stopped
-#    depends_on:
-#      - createbuckets
-#    networks:
-#      - mirror-node-bridge
-#    environment:
-#      DEBUG: "true"
-#      REAPER_ENABLE: "true"
-#      REAPER_MIN_KEEP: "20"
-#      REAPER_INTERVAL: "5"
-#      S3_ENABLE: "true"
-#      GCS_ENABLE: "false"
-#      SIG_REQUIRE: "true"
-#      SIG_PRIORITIZE: "true"
-#      SIG_EXTENSION: "evts_sig"
-#      STREAM_EXTENSION: "evts"
-#      BUCKET_NAME: "hedera-streams"
-#      BUCKET_PATH: "eventsStreams/node0"
-#      S3_ACCESS_KEY: "minioadmin"
-#      S3_SECRET_KEY: "minioadmin"
-#    volumes:
-#      - "${NETWORK_NODE_LOGS_ROOT_PATH}/eventsStreams:/events"
-#    command:
-#      - /usr/bin/env
-#      - python3.7
-#      - /usr/local/bin/mirror.py
-#      - --linux
-#      - --watch-directory
-#      - /events
-#      - --s3-endpoint
-#      - http://minio:9000
-
-#  network-node-account-balances-uploader:
-#    container_name: network-node-account-balances-uploader
-#    image: gcr.io/hedera-registry/uploader-mirror:0.4.0
-#    user: root
-#    restart: unless-stopped
-#    depends_on:
-#      - createbuckets
-#    networks:
-#      - mirror-node-bridge
-#    environment:
-#      DEBUG: "true"
-#      REAPER_ENABLE: "false"
-#      REAPER_MIN_KEEP: "20"
-#      REAPER_INTERVAL: "300"
-#      S3_ENABLE: "true"
-#      GCS_ENABLE: "false"
-#      SIG_REQUIRE: "true"
-#      SIG_PRIORITIZE: "false"
-#      SIG_EXTENSION: "pb_sig.gz"
-#      STREAM_EXTENSION: "pb.gz"
-#      BUCKET_NAME: "hedera-streams"
-#      BUCKET_PATH: "accountBalances/balance0"
-#      S3_ACCESS_KEY: "minioadmin"
-#      S3_SECRET_KEY: "minioadmin"
-#    volumes:
-#      - "network-node-account-balances:/accountbalance"
-#    command:
-#      - /usr/bin/env
-#      - python3.7
-#      - /usr/local/bin/mirror.py
-#      - --linux
-#      - --watch-directory
-#      - /accountbalance
-#      - --s3-endpoint
-#      - http://minio:9000
 
 networks:
     network-node-bridge:
