fix extension for account balances

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -172,8 +172,8 @@ services:
       GCS_ENABLE: "false"
       SIG_REQUIRE: "true"
       SIG_PRIORITIZE: "true"
-      SIG_EXTENSION: "pb_sig.gz"
-      STREAM_EXTENSION: "pb.gz"
+      SIG_EXTENSION: "pb_sig"
+      STREAM_EXTENSION: "pb"
       BUCKET_NAME: "hedera-streams"
       BUCKET_PATH: "accountBalances/balance0.0.3"
       S3_ACCESS_KEY: "minioadmin"
